fix cart logic on product update + add exists method to repository + fix identifiable node equals + test workflow with cart, product, and stock